--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name="com.example.blog.PostsDoActivity" />
         <activity android:name="com.example.blog.PostInformationActivity" />
         <activity android:name="com.example.blog.MainActivity" />
+        <activity android:name="com.example.blog.ProfileActivity" />
 
     </application>
 
